--- a/_Example/index.html
+++ b/_Example/index.html
@@ -2,12 +2,51 @@
   <head>
     <script src="https://aframe.io/releases/1.7.1/aframe.min.js"></script>
   </head>
+
   <body>
     <a-scene>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+      <a-entity
+          id="composition" rotation="0 0 0">
+          <a-box 
+            id="123" 
+            position="0 3.67116 -3.838" 
+            color="#4CC3D9"
+            animation="property: rotation; to: 0 360 0; dur: 2000; loop: true; delay: 1100; easing: easeOutElastic"
+          ></a-box>
+
+        <a-cylinder 
+          position="0 0.5 -3.84117" 
+          radius="0.55" 
+          color="#EF2D5E" 
+          material="color: #401eff; metalness: 0.76" 
+        >
+          <a-cylinder 
+              position="0 -0.5 0" 
+              radius="0.9" 
+              color="#EF2D5E" 
+              material="color: red; metalness: 0.76" 
+            ></a-cylinder>
+      </a-cylinder>
+
+
+         <a-entity 
+         id="cylinder" 
+         position="0 0 -3.84117">
+              <a-cylinder 
+                radius="0.5" 
+                height="1.5" 
+                color="#FFC65D" 
+                scale="1 1.36192 1" 
+                animation="dur: 1000; easing: linear; loop: true; dir: alternate; property: position; to: 0 2 0"></a-cylinder>
+          </a-entity>
+        </a-entity>
+
+
+
+
+
+
+      <a-plane position="0 0 -4" rotation="-90 0 0" width="100" height="100" color="#7BC8A4"></a-plane>
       <a-sky color="#ECECEC"></a-sky>
     </a-scene>
   </body>
