--- a/_Example/index.html
+++ b/_Example/index.html
@@ -4,14 +4,12 @@
   </head>
 
   <body>
-    <a-scene>
+    <a-scene fog="color: blue; type: exponential; density: 0.09">
 <a-asset>
     <img id="env01" src="img/palmtrees01.webp"> 
     <a-asset-item id="bucket-obj" src="objects\lowqbucket_02.glb"></a-asset-item>
     <a-asset-item id="bucket02-obj" src="objects\lowqbucket_01.obj"></a-asset-item>
 </a-asset>
-
-
 
 <!--Objects-->
       <a-entity
@@ -21,7 +19,7 @@
             position="0 3.67116 -3.838" 
             color="#4CC3D9"
             animation="property: rotation; to: 0 360 0; dur: 2000; loop: true; delay: 1000; easing: easeOutElastic"
-          ></a-box>
+          ><a-entity shadow="" obj-model="obj: objects\lowqbucket_01.obj" material="color:red ; envMap: #env01" scale="0.2 0.2 0.2" position="0.35548 0.49832 0.35753"></a-entity></a-box>
 
         <a-cylinder 
           position="0 0.5 -3.84117" 
@@ -46,15 +44,14 @@
                 height="1.5" 
                 color="#FFC65D" 
                 scale="1 1.36192 1" 
-                material="color: yellow; metalness: 0.76; roughness: 0; envMap: #env01" 
+                material="color: yellow; metalness: 0.76; roughness: 0.9" 
                 animation="dur: 1000; easing: linear; loop: true; dir: alternate; property: position; to: 0 2 0"></a-cylinder>
           </a-entity>
         </a-entity>
 
+   
+<a-entity shadow gltf-model="objects\lowqbucket_02.glb" position="0 -0.65858 -3.81011" scale="0.8 0.8 0.8"></a-entity>
 
-<!--Custom Geometries-->    
-<a-entity shadow gltf-model="#bucket-obj" position="0.82995 0 -6.66368"></a-entity>
-<a-entity shadow obj-model="obj: #bucket02-obj" position="-0.82995 0 -6.66368"></a-entity>
 
 <!--Env-->
 
@@ -65,9 +62,8 @@
 <!--Lights-->
 <!---------->
     
-<a-entity light="angle: 26.56; penumbra: 0.84; type: spot; castShadow: true" position="0.00392 2.33307 0" rotation="-4.132171618483497 0 0" id="spot01"></a-entity>
+<a-entity light="angle: 26.56; penumbra: 0.84; type: spot; intensity: 10.00; castShadow: true" position="0.00392 2.33307 0" rotation="-4.132171618483497 0 0" id="spot01"></a-entity>
 <a-entity light="color: #999bff; intensity: 0.41; type: ambient" id="ambient"></a-entity>
-
 
     </a-scene>
   </body>
