documentation for a-cursor-navigation

--- a/_Example/02_rooms_1functional.html
+++ b/_Example/02_rooms_1functional.html
@@ -14,6 +14,7 @@
 <!--A-Frame Extras-->
     <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.6.1/dist/aframe-extras.min.js"></script>
  
+ <!--navigation component used in ImGame -->   
     <script src="components/a-cursor-navigation.js"></script>
 
   </head>
