--- a/MarisBulats/Index.html
+++ b/MarisBulats/Index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>Mana A-Frame Pasaule</title>
       <script src="https://aframe.io/releases/1.7.1/aframe.min.js"></script>
 
  <!--Event-Set Component-->
@@ -10,27 +11,54 @@
  
  <!--navigation component used in ImGame -->   
     <script src="a-cursor-navigation.js"></script>
+
+<!--aframe-environment-component-->
+    <script src="https://unpkg.com/aframe-environment-component@1.5.x/dist/aframe-environment-component.min.js"></script>
+
+
   </head>
   <body>
-      <a-scene> <a-box 
-        position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"
+      <a-scene> 
+        <!--Asseti--> 
+        <a-assets></a-assets>
+
+        <!--Wiskas-->
+
+        <!--aframe-environment-component-->
+        <a-entity environment="preset: egypt"></a-entity>
+
+        <a-box  
+        position="-1 0.5 -3" 
+        rotation="0 45 0" 
+        color="#4CC3D9"
         event-set__enter="_event: mouseenter; color: red"
         event-set__leave="_event: mouseleave; color: #4CC3D9"
-        animation__click="property: scale; from: 1 1 1; to: 1.5 1.5 1.5; dur: 100; dir: alternate; loop: 1; easing: easeInOutCirc; startEvents: click; "
-        ></a-box>
-        <a-sky color="#B8D7E6"></a-sky>
-         <a-plane navmesh position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-entity 
-        position="0 0 0" 
-        id="cameraRig" 
-        movement-controls="speed: 1.01; enabled:true"
-        a-cursor-teleport="cameraRig: #cameraRig; cameraHead: #head">
-        <a-entity id="head" position="0 1.6 0" camera="near: 0.1" look-controls="reverseMouseDrag: false">
-          <a-cursor color="white"></a-cursor>
-        </a-entity>
-        <a-entity id="leftHand" hand-tracking-grab-controls="hand: left;"></a-entity>
-        <a-entity id="rightHand" hand-tracking-grab-controls="hand: right;"></a-entity>
-      </a-entity>
+        animation__click="property: scale; from: 1 1 1; to: 1.5 1.5 1.5; dur: 100; dir: alternate; loop: 1; easing: easeInOutCirc; startEvents: click; ">
+      </a-box>
+
+         <a-plane navmesh 
+         position="0 0 -4" 
+         rotation="-90 0 0" 
+         width="4" 
+         height="4" 
+         color="#7BC8A4">
+        </a-plane>
+
+        <a-sphere 
+        position="1 1.25 -5" 
+        radius="1.25" 
+        color="#000000">
+      </a-sphere>
+
+
+              <a-sky color="#B8D7E6"></a-sky>
+
+<!--Camera-->
+
+ <a-entity camera look-controls wasd-controls="acceleration: 20; wsAxis: y; wsInverted: true" position="0 0 2">
+        <a-cursor color="#000000"></a-cursor>
+    </a-entity>
+
       </a-scene>
       
   </body>
