--- a/_Example/01_mechanism.html
+++ b/_Example/01_mechanism.html
@@ -4,6 +4,8 @@
   </head>
 
   <body>
+
+
     <a-scene fog="color: blue; type: exponential; density: 0.09">
 <a-asset>
     <img id="env01" src="img/palmtrees01.webp"> 
@@ -50,7 +52,7 @@
         </a-entity>
 
    
-<a-entity shadow gltf-model="objects\lowqbucket_02.glb" position="0 -0.65858 -3.81011" scale="0.8 0.8 0.8"></a-entity>
+<a-entity shadow gltf-model="#bucket-obj" position="0 -0.65858 -3.81011" scale="0.8 0.8 0.8"></a-entity>
 
 
 <!--Env-->
