--- a/_Example/02_rooms_1functional.html
+++ b/_Example/02_rooms_1functional.html
@@ -21,7 +21,7 @@
   <body>
     <a-scene obb-collider="showColliders: false">
 
-<!--Pinc Cursor Click-->
+<!--Pinch Cursor Click-->
       <a-box 
         position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"
         event-set__enter="_event: mouseenter; color: red"
