task 2. fixed comments

--- a/MaryiaBrauer/task2.html
+++ b/MaryiaBrauer/task2.html
@@ -43,7 +43,7 @@
       <!--<a-cylinder grabbable=" hoverEnabled: true; hoverColor: #red;" position="0 1.0289 -0.38727" radius="0.5" height="1.5" color="#FFC65D" scale="0.3 0.3 0.3" rotation="0 0 -48.13475732673559"></a-cylinder>
 
 
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
+      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>-->
 
 
         
