--- a/MarisBulats/Index.html
+++ b/MarisBulats/Index.html
@@ -14,21 +14,21 @@
 
 <!--aframe-environment-component-->
     <script src="https://unpkg.com/aframe-environment-component@1.5.x/dist/aframe-environment-component.min.js"></script>
-
+ 
 
   </head>
   <body>
       <a-scene> 
         <!--Asseti--> 
-        <a-assets></a-assets>
+       <a-asset-item id="Robots" src="objects/char01.glb"></a-asset-item>
 
         <!--Wiskas-->
 
         <!--aframe-environment-component-->
-        <a-entity environment="preset: egypt"></a-entity>
+        <a-entity environment="preset: poison" position=" 0 -0.1 0"></a-entity>
 
         <a-box  
-        position="-1 0.5 -3" 
+        position="0.45 0.5 -2.75" 
         rotation="0 45 0" 
         color="#4CC3D9"
         event-set__enter="_event: mouseenter; color: red"
@@ -39,26 +39,30 @@
          <a-plane navmesh 
          position="0 0 -4" 
          rotation="-90 0 0" 
-         width="4" 
+         width="10" 
          height="4" 
          color="#7BC8A4">
         </a-plane>
 
-        <a-sphere 
-        position="1 1.25 -5" 
-        radius="1.25" 
-        color="#000000">
-      </a-sphere>
+<a-entity 
+gltf-model="#Robots" animation-mixer="clip"
+position="-1.5 0.5 -03.75"
+rotation="0 10 0"></a-entity>
 
-
-              <a-sky color="#B8D7E6"></a-sky>
+        
+<!--Druvis uz nekurieni-->
+   <a-entity id="door-hinge" 
+                position="-2 0 -3" 
+                rotation="0 0 0"
+                animation__click="property: rotation; from: 0 00 0; to: 0 90 0; dur: 1000; dir: alternate; loop: 1; easing: easeInOutCirc; startEvents: click; ">
+        <a-box position="0.5 1.25 0" 
+               width="1" height="2.5" depth="0.1" 
+               color="#4e2a1e">
+        </a-box> </a-entity>
 
 <!--Camera-->
-
- <a-entity camera look-controls wasd-controls="acceleration: 20; wsAxis: y; wsInverted: true" position="0 0 2">
-        <a-cursor color="#000000"></a-cursor>
-    </a-entity>
-
+<a-camera
+><a-cursor></a-cursor></a-camera>
       </a-scene>
       
   </body>
