--- a/OtoJauja/index.html
+++ b/OtoJauja/index.html
@@ -11,6 +11,9 @@
     <!--navigation component used in ImGame -->   
     <script src="a-cursor-navigation.js"></script>
 
+    <!--Anination switcher-->
+    <script src="animation-switcher.js"></script>
+
     <!--aframe-environment-component-->  
     <script src="https://unpkg.com/aframe-environment-component@1.5.x/dist/aframe-environment-component.min.js"></script>
 
@@ -21,21 +24,17 @@
         <assets>
             <a-asset-item id="robot-obj" src="objects/robot_01.glb"></a-asset-item>
             <a-asset-item id="char_dance" src="objects/character.glb"></a-asset-item>
+            <a-asset-item id="piramida" src="objects/piramida.glb"></a-asset-item>
         </assets>
 
         <a-entity id="stuff">
-            <a-entity id="box" position="-0.13838 0.5 -3">
-                <a-box rotation="0 45 0" color="#4CC3D9" animation="dur: 3000; easing: linear; loop: true; property: rotation; to: 0 360 0"
-                event-set__enter="_event: mouseenter; color: green"
-                event-set__leave="_event: mouseleave; color: #4CC3D9"
-                animation__click="property: scale; from: 1 1 1; to: 1.5 1.5 1.5; dur: 100; dir: alternate; loop: 1; easing: easeInOutCirc; startEvents: click; "></a-box>
-            </a-entity>
-            <a-sphere position="1.07188 0.92567 -2.68643" radius="1.25" color="#EF2D5E" animation="dur: 3000; easing: easeOutExpo; loop: true; property: position; to: 1 8 10" scale="0.25 0.25 0.25">
-            </a-sphere>
         </a-entity>
 
         <!--Objects-->
-        <a-entity shadow gltf-model="objects/character.glb" animation-mixer="clip: Dancing" position="0 0 -4.97052" event-set__enter="_event: mouseenter; animation-mixer.clip: DancingHipHop"></a-entity>
+        <a-entity gltf-model="#char_dance"  class="clickable" position="0 0 -4.97052" animation-on-hover="defaultClip: Dancing; clickClip: DancingHipHop"></a-entity>
+        <a-entity gltf-model="objects/piramida.glb" position="0 0 -7.73105" scale="2 2 2"
+        animation__click="property: rotation; from: 0 0 0; to: -45 0 0; dur: 5000; dir: alternate; easing: easeInOutCirc; startEvents: click; ">
+        </a-entity>
 
 
         <!--Env-->
@@ -46,7 +45,6 @@
 
 
          <!--Lights-->
-        <a-entity light="angle: 26.56; penumbra: 0.84; type: spot; castShadow: true" position="0.00392 2.33307 0" rotation="-4.132171618483497 0 0" id="spot01"></a-entity>
         <a-entity light="color: #999bff; intensity: 0.41; type: ambient" id="ambient"></a-entity>
 
         <!--Camera with cursor and hand tracking enabled. Pinch gesture as click event-->
