--- a/LianaOzolina/index.html
+++ b/LianaOzolina/index.html
@@ -14,38 +14,100 @@
 <!--A-Frame Extras-->
     <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.6.1/dist/aframe-extras.min.js"></script>
  
- <!--navigation component used in ImGame -->   
+<!--navigation component used in ImGame -->   
     <script src="a-cursor-navigation.js"></script>
 
-  </head>
-  <body>
+</head>
+<body>
     <a-scene obb-collider="showColliders: false">
+
+
 
 <!--Assets-->
   <a-asset>
-        <a-asset-item id="Floor" src="objects/PlaneFloor.glb"></a-asset-item>
-        <a-asset-item id="Navm" src="PlaneNav.glb"></a-asset-item>
+        <a-asset-item id="Floor" src="Objects/PlaneFloor.glb"></a-asset-item>
+        <a-asset-item id="Navm" src="Objects/PlaneNav.glb"></a-asset-item>
+        <a-asset-item id="TetrisH" src="Objects/TetrisH.glb"></a-asset-item>
+        <a-asset-item id="TetrisI" src="Objects/TetrisI.glb"></a-asset-item>
+        <a-asset-item id="TetrisL" src="Objects/TetrisL.glb"></a-asset-item>
+        <a-asset-item id="TetrisT" src="Objects/TetrisT.glb"></a-asset-item>
+        <a-asset-item id="Cup" src="Objects/TrophyCup.glb"></a-asset-item>
+
+<!--Mixins-->
+      <a-mixin id="MxTH" gltf-model="#TetrisH"
+        position="0 0 0" rotation="0 0 0" scale="1 1 1"
+        event-set__enter="_event: mouseenter; scale: 1.05 1.05 1.05;"
+        event-set__leave="_event: mouseleave; scale: 1 1 1;"
+        animation__click="property: scale; from: 1 1 1; to: 0.0001 0.0001 0.0001; dur: 100; easing: easeInQuad; startEvents: click; "
+      ></a-mixin>
+      <a-mixin id="MxTI" gltf-model="#TetrisI"
+        position="0 0 0" rotation="0 0 0" scale="1 1 1"
+        event-set__enter="_event: mouseenter; scale: 1.05 1.05 1.05;"
+        event-set__leave="_event: mouseleave; scale: 1 1 1;"
+        animation__click="property: scale; from: 1 1 1; to: 0.0001 0.0001 0.0001; dur: 100; easing: easeInQuad; startEvents: click; "
+      ></a-mixin>
+      <a-mixin id="MxTL" gltf-model="#TetrisL"
+        position="0 0 0" rotation="0 0 0" scale="1 1 1"
+        event-set__enter="_event: mouseenter; scale: 1.05 1.05 1.05;"
+        event-set__leave="_event: mouseleave; scale: 1 1 1;"
+        animation__click="property: scale; from: 1 1 1; to: 0.0001 0.0001 0.0001; dur: 100; easing: easeInQuad; startEvents: click; "
+      ></a-mixin>
+      <a-mixin id="MxTT" gltf-model="#TetrisT"
+        position="0 0 0" rotation="0 0 0" scale="1 1 1"
+        event-set__enter="_event: mouseenter; scale: 1.05 1.05 1.05;"
+        event-set__leave="_event: mouseleave; scale: 1 1 1;"
+        animation__click="property: scale; from: 1 1 1; to: 0.0001 0.0001 0.0001; dur: 100; easing: easeInQuad; startEvents: click; "
+      ></a-mixin>
+
   </a-asset>
 
 
-<!--Pinc Cursor Click
-<a-mixin
-      <a-entity
-        position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"
-        event-set__enter="_event: mouseenter; color: white"
-        event-set__leave="_event: mouseleave; color: #4CC3D9"
-        animation__click="property: scale; from: 1 1 1; to: 0.0001 0.0001 0.0001; dur: 100; easing: easeInQuad; startEvents: click; "
-      ></a-entity>
-></a-mixin>-->
-   
-      <!--Camera with cursor and hand tracking enabled. Pinch gesture as click event-->
 
-      <a-entity 
-      position="0 0 0"
-      id="PlaneFloor"
-      color="white"
-      ></a-entity>
+<!--World-Entities-->
 
+<a-sky color="#0C1629"></a-sky>
+<a-entity gltf-model="#Floor" position="0 0 0" color="#808080"></a-entity>
+<a-entity gltf-model="#Navm" position="0 0.01 0" material="color: yellow; metalness: 0.76; roughness: 0.9"  navmesh></a-entity>
+
+
+  <!--Tetris Blocks-->
+  <a-entity mixin="MxTH" position="-1 2 -4.5" rotation="0 0 0"></a-entity>
+  <!--HHH
+  <a-entity mixin="MxTH" position="-1 4.5 2" rotation="0 0 0"></a-entity>
+  <a-entity mixin="MxTH" position="2 1 -3.5" rotation="0 0 0"></a-entity>
+  <a-entity mixin="MxTH" position="2 0.5 -12" rotation="90 0 0"></a-entity>
+  <a-entity mixin="MxTH" position="0 1.5 -14" rotation="90 0 0"></a-entity>
+  <a-entity mixin="MxTH" position="-2 0.5 -16" rotation="90 0 0"></a-entity>
+  <a-entity mixin="MxTH" position="2 1 -16.5" rotation="0 0 0"></a-entity>
+  <a-entity mixin="MxTH" position="-2.5 1 -12" rotation="0 90 90"></a-entity>
+  <a-entity mixin="MxTH" position="0 2 -11.5" rotation="0 0 0"></a-entity> 
+  III
+  <a-entity mixin="MxTI" position="3.5 2 -3.5" rotation="0 0 0"></a-entity> 
+  <a-entity mixin="MxTI" position="-2 2.5 -3.5" rotation="90 90 0"></a-entity> 
+  <a-entity mixin="MxTI" position="0 0.5 -4.5" rotation="90 90 0"></a-entity> 
+  <a-entity mixin="MxTI" position="-1 1.5 -10.5" rotation="90 90 0"></a-entity>
+  <a-entity mixin="MxTI" position="1 0.5 -14.5" rotation="90 90 0"></a-entity>
+  <a-entity mixin="MxTI" position="1.5 2 -13.5" rotation="0 0 0"></a-entity>
+  <a-entity mixin="MxTI" position="-1.5 2 -14.5" rotation="0 0 0"></a-entity>
+  <a-entity mixin="MxTI" position="0.5 2 -16.5" rotation="0 0 0"></a-entity>
+  <a-entity mixin="MxTI" position="-2.5 1.5 -15" rotation="90 0 0"></a-entity>
+  <a-entity mixin="MxTI" position="-0.5 0.5 -12" rotation="90 0 0"></a-entity>
+  LLL-->
+  <a-entity mixin="MxTI" position="0.5 1 -3.5" rotation="0 180 0"></a-entity>
+  <a-entity mixin="MxTI" position="1.5 3 -3.5" rotation="0 0 0"></a-entity>
+  <a-entity mixin="MxTI" position="-3 1.5 -3.5" rotation="0 90 0"></a-entity>
+  <a-entity mixin="MxTI" position="3.5 2 -3.5" rotation="0 90 0"></a-entity>
+  <a-entity mixin="MxTI" position="3.5 2 -3.5" rotation="0 0 0"></a-entity>
+  <a-entity mixin="MxTI" position="3.5 2 -3.5" rotation="0 90 0"></a-entity>
+  <a-entity mixin="MxTI" position="3.5 2 -3.5" rotation="90 0 90"></a-entity>
+  <a-entity mixin="MxTI" position="3.5 2 -3.5" rotation="180 90 0"></a-entity>
+  <a-entity mixin="MxTI" position="3.5 2 -3.5" rotation="90 0 -90"></a-entity>
+  <a-entity mixin="MxTI" position="3.5 2 -3.5" rotation="90 90 0"></a-entity>
+  <a-entity mixin="MxTI" position="3.5 2 -3.5" rotation="180 180 0"></a-entity>
+  <a-entity mixin="MxTI" position="3.5 2 -3.5" rotation="180 -90 0"></a-entity>
+  <a-entity mixin="MxTI" position="3.5 2 -3.5" rotation="180 90 0"></a-entity>
+
+<!--Camera with cursor and hand tracking enabled. Pinch gesture as click event-->
 
       <a-entity 
         position="0 0 0" 
@@ -58,9 +120,6 @@
         <a-entity id="leftHand" hand-tracking-grab-controls="hand: left;"></a-entity>
         <a-entity id="rightHand" hand-tracking-grab-controls="hand: right;"></a-entity>
       </a-entity>
-
-      <a-plane navmesh position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="#000000"></a-sky>
 
     </a-scene>
   </body>
