--- a/LianaOzolina/index.html
+++ b/LianaOzolina/index.html
@@ -92,20 +92,21 @@
   <a-entity mixin="MxTI" position="0.5 2 -16.5" rotation="0 0 0"></a-entity>
   <a-entity mixin="MxTI" position="-2.5 1.5 -15" rotation="90 0 0"></a-entity>
   <a-entity mixin="MxTI" position="-0.5 0.5 -12" rotation="90 0 0"></a-entity>
+
+  <a-entity mixin="MxTL" position="0.5 1.5 -3.5" rotation="0 180 -90"></a-entity>
+  <a-entity mixin="MxTL" position="2 3 -3.5"></a-entity>
+  <a-entity mixin="MxTL" position="-3 1.5 -3.5" rotation="0 0 -90"></a-entity>
+  <a-entity mixin="MxTL" position="-1 4.5 -3.5" rotation="0 0 -90"></a-entity>
+  <a-entity mixin="MxTL" position="0.5 2 -4.5"></a-entity>
   LLL-->
-  <a-entity mixin="MxTI" position="0.5 1 -3.5" rotation="0 180 0"></a-entity>
-  <a-entity mixin="MxTI" position="1.5 3 -3.5" rotation="0 0 0"></a-entity>
-  <a-entity mixin="MxTI" position="-3 1.5 -3.5" rotation="0 90 0"></a-entity>
-  <a-entity mixin="MxTI" position="3.5 2 -3.5" rotation="0 90 0"></a-entity>
-  <a-entity mixin="MxTI" position="3.5 2 -3.5" rotation="0 0 0"></a-entity>
-  <a-entity mixin="MxTI" position="3.5 2 -3.5" rotation="0 90 0"></a-entity>
-  <a-entity mixin="MxTI" position="3.5 2 -3.5" rotation="90 0 90"></a-entity>
-  <a-entity mixin="MxTI" position="3.5 2 -3.5" rotation="180 90 0"></a-entity>
-  <a-entity mixin="MxTI" position="3.5 2 -3.5" rotation="90 0 -90"></a-entity>
-  <a-entity mixin="MxTI" position="3.5 2 -3.5" rotation="90 90 0"></a-entity>
-  <a-entity mixin="MxTI" position="3.5 2 -3.5" rotation="180 180 0"></a-entity>
-  <a-entity mixin="MxTI" position="3.5 2 -3.5" rotation="180 -90 0"></a-entity>
-  <a-entity mixin="MxTI" position="3.5 2 -3.5" rotation="180 90 0"></a-entity>
+  <a-entity mixin="MxTL" position="-2 0.5 -10.5" rotation="0 90 0"></a-entity>
+  <a-entity mixin="MxTL" position="-2 0.5 -13.5" rotation="90 0 90"></a-entity>
+  <a-entity mixin="MxTL" position="-1 2.5 -12.5" rotation="180 90 0"></a-entity>
+  <a-entity mixin="MxTL" position="2 1.5 -11.5" rotation="90 0 -90"></a-entity>
+  <a-entity mixin="MxTL" position="1.5 2.5 -12" rotation="90 90 0"></a-entity>
+  <a-entity mixin="MxTL" position="1.5 1 -15.5" rotation="180 180 0"></a-entity>
+  <a-entity mixin="MxTL" position="3 0.5 -15.5" rotation="180 -90 0"></a-entity>
+  <a-entity mixin="MxTL" position="-1 1.5 -16.5" rotation="180 90 0"></a-entity>
 
 <!--Camera with cursor and hand tracking enabled. Pinch gesture as click event-->
 
